--- a/css/home/mobile.scss
+++ b/css/home/mobile.scss
@@ -4,7 +4,7 @@ $background-color: white;
 $logo-color: #ef9629;
 $hover-background: rgb(95, 95, 95);
 $font-size: 0.8em;
-$font-active: 0.7em;
+$font-active: 0.9em;
 $font-header: 1em;
 $mobile-color: rgb(22,22,22);
 $mobile-text: rgb(233,233,233);
@@ -47,7 +47,7 @@ header {
         display: block;
         width: 25px;
         height: 3px;
-        background-color: white;
+        background-color: $font-color;
         margin: 5px;
         transition: all 0.3s ease;
     }
@@ -90,6 +90,7 @@ header {
                 opacity: 0;
                 a:hover{
                     font-weight:bold;
+                    font-size: $font-active;
                 }
                 list-style: none;
                 padding: 10vh 0 10vh 0;
@@ -125,12 +126,14 @@ header {
     }
     .toggle .line1{
         transform: rotate(-45deg) translate(-5px,6px);
+        background-color: $background-color;
     }
     .toggle .line2{
         opacity: 0;
     }
     .toggle .line3{
         transform: rotate(45deg) translate(-5px,-6px);
+        background-color: $background-color;
     }
 
 }
@@ -150,13 +153,30 @@ header {
     background-color: black;
     img{
         position:absolute;
-        height: 100%;
         left:50%;
         top:50%;
         transform:translate(-50%, -50%);
         opacity: 0.8;
     }
  }
+ @media (max-width:450px)
+ {
+     .slideshow-container{
+         img{
+            height: 100%;
+         }
+     }
+ }
+
+ @media(min-width: 451px){
+    .slideshow-container{
+        img{
+            width:100%;
+            height:100%;
+        }
+    }
+ }
+
 
     .slide{
         display: none;
@@ -180,10 +200,7 @@ header {
         //margin-right: 4vw;
     }
 
-    .prev:hover, .next:hover{
-        border: 2px solid white;
-        background-color: rgba(0,0,0,0.9);
-    }
+
     // styling to make dots border-radius for corners
     .dot-container{
         margin-top: 15px;
@@ -258,7 +275,7 @@ header {
         user-select: none;
     }
     a:hover{
-        color: white;
+        color: black;
     }
 }
 
@@ -296,6 +313,7 @@ header {
                 background-color: $logo-color;
                 width: 60px;
                 border-radius:60px;
+                flex-shrink: 0;
             }
             p{
                 color: $font-color;
@@ -336,7 +354,7 @@ footer{
             img{
                 background-color: $logo-color;
                 border-radius:50%;
-                border: 2px solid $font-color;
+                border: 1px solid $logo-color;
                 width: auto;
                 height: 7vh;
                 min-height: 40px;
@@ -344,11 +362,10 @@ footer{
                 margin: 0 1vw 2vh 1vw;
             }
             img:hover{
-                background-color: white;
-                border-width: 3px;
+                border-width: 2px;
+                border-color: black;
             }
         }
-
-
     }
+    background: rgba(23,23,23,0.2);
 }
