--- a/css/services/desktop.css
+++ b/css/services/desktop.css
@@ -1,19 +1,9 @@
 @media (min-width: 450px) and (min-height: 500px) {
-  header .logo-container {
-    padding-top: 5vh;
-    margin-bottom: 5vh;
-  }
-  header .logo-container .logo img {
-    width: 75vw;
-    max-width: 500px;
-  }
-  header .head-container {
+  header .burger {
     display: none;
   }
-  header .line-desktop {
-    border-top: 1px solid #ef9629;
-  }
-  header .menu-container {
+  header .logo-container {
+    width: 35vw;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -28,18 +18,44 @@
         -ms-flex-align: center;
             align-items: center;
   }
+  header .logo-container img {
+    width: 80%;
+    padding: 0;
+    padding-left: 10%;
+  }
+  header .menu-container nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
   header .menu-container .nav {
     position: relative;
-    width: 100vw;
+    width: 65vw;
     height: 5vh;
-    top: 0;
+    top: 5vh;
+    background-color: transparent;
+    margin-bottom: 10vh;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-transform: translateX(0%);
             transform: translateX(0%);
     -webkit-transition-property: none;
     transition-property: none;
   }
-  header .menu-container .nav ul {
-    width: 75vw;
+  header .menu-container ul {
+    width: 65vw;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -55,29 +71,34 @@
             align-items: center;
     text-align: center;
   }
-  header .menu-container .nav ul li {
-    display: in-line;
+  header .menu-container ul li {
     text-align: center;
     opacity: 1;
     padding: 0;
-    width: 25vw;
+    width: 15vw;
     min-width: 50px;
   }
-  header .menu-container .nav ul li a:hover {
-    font-size: 22px;
-  }
-  header .menu-container .nav ul li a {
-    font-size: 20px;
+  header .menu-container ul li a {
+    font-size: 0.8em;
     letter-spacing: 4px;
+    font-weight: bold;
   }
-  header .menu-container .nav ul li a .active {
-    font-size: 19px;
+  header .menu-container ul li a .active {
+    font-weight: bold;
+    background-color: transparent;
+    color: #e9e9e9;
+    border: 2px solid #ef9629;
   }
   .desktop-line {
     margin-top: 10px;
   }
   h3 {
-    font-size: 24px;
+    font-size: 1em;
+    letter-spacing: 2px;
+  }
+  .prev:hover, .next:hover {
+    border: 2px solid white;
+    background-color: rgba(0, 0, 0, 0.9);
   }
   .container.left, .container.right {
     -webkit-box-orient: horizontal;
@@ -89,12 +110,18 @@
   }
   .container.left p, .container.right p {
     width: 40vw;
-    font-size: 20px;
+    font-size: 0.8em;
+    line-height: 2;
+    letter-spacing: 1px;
     padding: 0 2vw 0 2vw;
   }
   .container.left .carousel-container, .container.right .carousel-container {
     margin: 0;
     padding: 0;
+  }
+  .container.left ul li, .container.right ul li {
+    line-height: 2;
+    letter-spacing: 1px;
   }
   .container.left .carousel-container {
     padding-left: 5vw;
@@ -124,7 +151,7 @@
   }
   .prev, .next {
     top: 45%;
-    font-size: 20px;
+    font-size: 0.8em;
     padding: 15px;
   }
 }
