--- a/css/services/landscape.css
+++ b/css/services/landscape.css
@@ -1,20 +1,6 @@
 @media (orientation: landscape) and (max-height: 450px) {
   header .logo-container .logo img {
-    height: 30vh;
-    width: auto;
-    padding-top: 5vh;
-  }
-  header .head-container {
-    height: 15vh;
-  }
-  header .head-container #hamburger-menu {
-    height: 8vh;
-  }
-  header .head-container #hamburger-menu img {
-    height: 10vh;
-    max-height: 32px;
-    min-height: 30px;
-    padding-top: 2vh;
+    width: 40%;
   }
   header .menu-container .nav {
     width: 100vw;
