--- a/css/services/mobile.css
+++ b/css/services/mobile.css
@@ -8,93 +8,50 @@
 body {
   font: 100% Helvetica, sans-serif;
   overflow-x: hidden;
-  background-color: #161616;
+  background-color: white;
   height: 100%;
 }
 
 header {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   width: 100%;
-  background-color: #161616;
+  background: rgba(61, 61, 61, 0.5);
 }
 
 header .logo-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-top: 11vh;
+  display: block;
   margin-bottom: 15px;
 }
 
-header .logo-container .logo img {
-  width: 90vw;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+header .logo-container img {
+  width: 60%;
+  padding: 0.6em;
 }
 
-header .head-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+header .burger div {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: #161616;
+  margin: 5px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+header .burger {
+  padding: 1em;
+  padding-right: .5em;
   position: fixed;
-  z-index: 98;
-  width: 100vw;
-  height: 10vh;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: right;
-      -ms-flex-align: right;
-          align-items: right;
-  background-color: #161616;
-  opacity: 0.95;
-}
-
-header .head-container #hamburger-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0;
-  padding: 0;
-  background-color: #161616;
-  -ms-flex-item-align: center;
-      align-self: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  height: 10vh;
-}
-
-header .head-container #hamburger-menu img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-item-align: center;
-      align-self: center;
-  width: auto;
-  z-index: 99;
-  height: 8vh;
-  min-height: 36px;
-  max-height: 40px;
-  padding-right: 5vw;
-  padding-top: 1vh;
-  padding-bottom: 1vh;
-  opacity: 1;
+  z-index: 110;
 }
 
 header .menu-container {
@@ -105,9 +62,19 @@ header .menu-container {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+}
+
+header .menu-container .burger-logo-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 header .menu-container .nav {
@@ -117,16 +84,19 @@ header .menu-container .nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 90vh;
+  height: 100vh;
   width: 75vw;
-  top: 10vh;
+  top: 0;
+  right: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: #161616;
-  opacity: 0.95;
+  opacity: 0.8;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: -webkit-transform 0.5s ease-in;
@@ -135,26 +105,25 @@ header .menu-container .nav {
   transition: transform 0.5s ease-in, -webkit-transform 0.5s ease-in;
 }
 
-header .menu-container .nav ul li {
+header .menu-container ul li {
   opacity: 0;
   list-style: none;
   padding: 10vh 0 10vh 0;
 }
 
-header .menu-container .nav ul li a:hover {
-  font-size: 15px;
+header .menu-container ul li a:hover {
   font-weight: bold;
+  font-size: 0.9em;
 }
 
-header .menu-container .nav ul a {
-  color: #e0e0e0;
+header .menu-container ul a {
+  color: #e9e9e9;
   text-decoration: none;
-  letter-spacing: 3px;
-  font-size: 14px;
+  letter-spacing: 2px;
+  font-size: 0.8em;
 }
 
-header .menu-container .nav ul a .active {
-  font-size: 16px;
+header .menu-container ul a .active {
   font-weight: bold;
   text-decoration: underline;
   color: #ef9629;
@@ -192,6 +161,22 @@ header .menu-container .nav-active {
   }
 }
 
+header .toggle .line1 {
+  -webkit-transform: rotate(-45deg) translate(-5px, 6px);
+          transform: rotate(-45deg) translate(-5px, 6px);
+  background-color: white;
+}
+
+header .toggle .line2 {
+  opacity: 0;
+}
+
+header .toggle .line3 {
+  -webkit-transform: rotate(45deg) translate(-5px, -6px);
+          transform: rotate(45deg) translate(-5px, -6px);
+  background-color: white;
+}
+
 .carousel-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -206,10 +191,10 @@ header .menu-container .nav-active {
 }
 
 .slideshow-container {
-  width: 90vw;
+  width: 100vw;
   position: relative;
   overflow: hidden;
-  height: 50vh;
+  height: 60vh;
 }
 
 .slideshow-container img {
@@ -233,7 +218,7 @@ header .menu-container .nav-active {
   padding: 15px;
   color: white;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 0.8em;
   -webkit-transition: 0.6s ease;
   transition: 0.6s ease;
   -webkit-user-select: none;
@@ -244,11 +229,6 @@ header .menu-container .nav-active {
 
 .next {
   right: 0;
-}
-
-.prev:hover, .next:hover {
-  border: 2px solid white;
-  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .dot-container {
@@ -262,6 +242,7 @@ header .menu-container .nav-active {
   width: 12px;
   margin: 0 3px;
   background-color: white;
+  border: 1px solid black;
   border-radius: 50%;
   display: inline-block;
   -webkit-transition: background-color 0.6s ease;
@@ -298,17 +279,14 @@ header .menu-container .nav-active {
 }
 
 h3 {
-  font-size: 18px;
-}
-
-h3 {
-  color: #e0e0e0;
+  font-size: 1em;
+  color: #161616;
   text-align: center;
   font-weight: 500;
 }
 
 .line {
-  width: 90vw;
+  width: 100vw;
   border: 1px solid #ef9629;
 }
 
@@ -328,47 +306,11 @@ h3 {
 
 .container-title p, .container p {
   width: 90vw;
-  text-align: center;
-  color: #e0e0e0;
-  font-size: 16px;
+  color: #161616;
+  font-size: 0.8em;
 }
 
-#submit {
-  margin-top: 5vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-#submit #submit-button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-#submit #submit-button .halfCircleLeft {
-  width: 25px;
-  height: 45px;
-  border: 3px solid #e0e0e0;
-  border-right: none;
-  border-radius: 25px 0 0 25px;
-}
-
-#submit #submit-button .rectangle {
+.container-title .other-container, .container .other-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -376,34 +318,58 @@ h3 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.container-title .other-container ul, .container .other-container ul {
+  padding-left: 5vw;
+  font-size: 0.8em;
+}
+
+.container-title .other-container p, .container .other-container p {
+  text-align: left;
+}
+
+#submit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 5vh;
+}
+
+#submit #submit-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 145px;
-  height: 45px;
-  border-top: 3px solid #e0e0e0;
-  border-bottom: 3px solid #e0e0e0;
-  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-#submit #submit-button .rectangle .request-container {
-  padding-top: 2px;
+#submit #submit-button .request-container {
+  width: 160px;
+  height: 40px;
+  border-radius: 30px;
+  border: 2px solid #161616;
 }
 
-#submit #submit-button .rectangle .request-container a {
+#submit #submit-button .request-container a {
   text-decoration: none;
-  color: #e0e0e0;
-  font-size: 15px;
+  background-color: white;
+  color: #161616;
+  font-size: 1em;
   text-transform: uppercase;
-  letter-spacing: 3px;
-}
-
-#submit #submit-button .halfCircleRight {
-  width: 25px;
-  height: 45px;
-  border: 3px solid #e0e0e0;
-  border-left: none;
-  border-radius: 0 25px 25px 0;
+  letter-spacing: 2px;
 }
 
 #line {
@@ -425,18 +391,19 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  background: rgba(23, 23, 23, 0.2);
 }
 
 footer #contact-info {
   padding: 4vh 0 2vh 0;
-  color: #e0e0e0;
+  color: #161616;
   text-align: center;
-  font-size: 15px;
+  font-size: 0.8em;
 }
 
 footer #contact-info a {
   text-decoration: none;
-  color: #e0e0e0;
+  color: #161616;
 }
 
 footer #social-media {
@@ -457,9 +424,9 @@ footer #social-media #social-icons a {
 }
 
 footer #social-media #social-icons img {
-  background-color: #e0e0e0;
+  background-color: #ef9629;
   border-radius: 50%;
-  border: 2px solid #e0e0e0;
+  border: 1px solid #ef9629;
   width: auto;
   height: 7vh;
   min-height: 40px;
@@ -468,7 +435,7 @@ footer #social-media #social-icons img {
 }
 
 footer #social-media #social-icons img:hover {
-  background-color: white;
-  border-width: 3px;
+  border-width: 2px;
+  border-color: black;
 }
 /*# sourceMappingURL=mobile.css.map */
