--- a/css/services/mobile.scss
+++ b/css/services/mobile.scss
@@ -1,9 +1,13 @@
 $font-stack: Helvetica, sans-serif;
-$font-color: rgb(224, 224, 224);
-$background-color: rgb(22, 22, 22);
+$font-color: rgb(22, 22, 22);
+$background-color: white;
 $logo-color: #ef9629;
 $hover-background: rgb(95, 95, 95);
-
+$font-size: 0.8em;
+$font-active: 0.9em;
+$font-header: 1em;
+$mobile-color: rgb(22,22,22);
+$mobile-text: rgb(233,233,233);
 *{
     margin: 0;
     padding: 0;
@@ -20,103 +24,84 @@ body {
 // top navigation bar 
 
 header {
-    display: block;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
     width: 100%;
-    background-color: $background-color;
+    background: rgba(61, 61, 61, 0.5);
 // Logo styling     
     .logo-container{
-        display:flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding-top: 11vh;
+        display:block;
         margin-bottom: 15px;
-        .logo img{
-            width: 90vw;
-            align-self:center;
+        img{
+            width: 60%;
+            padding: 0.6em;
         }
     }
 // Hamburger menu styling 
-    .head-container{
-        display: flex;
-        position:fixed;
-        z-index: 98;
-        width: 100vw;
-        height: 10vh;
-        flex-direction: row;
-        justify-content: flex-end;
-        align-items: right;
-        background-color: $background-color;
-        opacity: 0.95;
-        #hamburger-menu{
-            display:flex;
-            margin: 0;
-            padding: 0;
-            background-color: $background-color;
-            align-self: center;
-            justify-content: flex-end;
-            height: 10vh;
-            img {
-                display: flex;
-                align-self:center;
-                width: auto;
-                z-index: 99;
-                height: 8vh;
-                min-height: 36px;
-                max-height: 40px;
-                padding-right: 5vw;
-                padding-top: 1vh;
-                padding-bottom: 1vh;
-                opacity: 1;
-
-            }
-        }
+    .burger div{
+        display: block;
+        width: 25px;
+        height: 3px;
+        background-color: $font-color;
+        margin: 5px;
+        transition: all 0.3s ease;
+    }
+    .burger{
+        padding: 1em;
+        padding-right: .5em;
+        position: fixed;
+        z-index: 110;
     }
 // menu styling and animations
     .menu-container{
         display:flex;
         flex-direction:row;
-        justify-content: flex-end;
+        //justify-content: flex-end;
         // menu styling when hamburger button is pressed
+        .burger-logo-container{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+        }
         .nav{
             position: absolute;
             z-index: 100;
             position: fixed;
             display:flex;
-            height: 90vh;
+            height:100vh;
             width: 75vw;
-            top: 10vh;
+            top: 0;
+            right: 0;
             align-items:center;
-            justify-content: space-around;
-            background-color: $background-color;
-            opacity: 0.95;
+            flex-direction: column;
+            background-color: $mobile-color;
+            opacity: 0.8;
             transform: translateX(100%);
-            transition: transform 0.5s ease-in;
-            ul{
-                li{
-                    opacity: 0;
-                    a:hover{
-                        font-size: 15px;
-                        font-weight:bold;
-                    }
-                    list-style: none;
-                    padding: 10vh 0 10vh 0;
-                    }
-                    a{
-                        color: $font-color;
-                        text-decoration: none;
-                        letter-spacing: 3px;
-                        font-size: 14px;
-                        .active{
-                            font-size: 16px;
-                            font-weight: bold;
-                            text-decoration: underline;
-                            color: $logo-color;
-                            background-color:$background-color;
-                    }
+            transition: transform 0.5s ease-in; 
+        }
+        ul{
+            li{
+                opacity: 0;
+                a:hover{
+                    font-weight:bold;
+                    font-size: $font-active;
+                }
+                list-style: none;
+                padding: 10vh 0 10vh 0;
+                }
+                a{
+                    color: $mobile-text;
+                    text-decoration: none;
+                    letter-spacing: 2px;
+                    font-size: $font-size;
+                    .active{
+                        font-weight: bold;
+                        text-decoration: underline;
+                        color: $logo-color;
+                        background-color:rgb(22, 22, 22);
                 }
             }
-    
         }
         .nav-active{
             transform: translateX(0%)
@@ -135,6 +120,17 @@ header {
         }
     }
 
+    .toggle .line1{
+        transform: rotate(-45deg) translate(-5px,6px);
+        background-color: white;
+    }
+    .toggle .line2{
+        opacity: 0;
+    }
+    .toggle .line3{
+        transform: rotate(45deg) translate(-5px,-6px);
+        background-color: white;
+    }
 }
 
 // slideshow carousel 
@@ -145,10 +141,10 @@ header {
 }
 
  .slideshow-container{
-    width: 90vw;
+    width: 100vw;
     position: relative;
     overflow: hidden; // crops pictures
-    height: 50vh;
+    height: 60vh;
     img{
         position:absolute;
         height:100%;
@@ -170,7 +166,7 @@ header {
         padding: 15px;
         color: white;
         font-weight: bold;
-        font-size: 25px;
+        font-size: $font-size;
         transition: 0.6s ease;
         user-select: none;
     }
@@ -180,10 +176,6 @@ header {
         //margin-right: 4vw;
     }
 
-    .prev:hover, .next:hover{
-        border: 2px solid white;
-        background-color: rgba(0,0,0,0.9);
-    }
     // styling to make dots border-radius for corners
     .dot-container{
         margin-top: 15px;
@@ -195,6 +187,7 @@ header {
         width: 12px;
         margin: 0 3px;
         background-color: white;
+        border: 1px solid black;
         border-radius: 50%;
         display: inline-block; // use this to show inside the container
         transition: background-color 0.6s ease;
@@ -213,18 +206,16 @@ header {
     }
 
 h3{
-    font-size: 18px
-}
-
-h3{
+    font-size: $font-header;
     color: $font-color;
     text-align: center;
     font-weight: 500;
 }
 
 
+
 .line{
-    width: 90vw;
+    width: 100vw;
     border: 1px solid $logo-color;
 }
 
@@ -235,61 +226,55 @@ h3{
     margin: 2vh 0 2vh 0;
     p{
         width: 90vw;
-        text-align: center;
+        //text-align: center;
         color: $font-color;
-        font-size: 16px;
+        font-size: $font-size;
     }
+    .other-container{
+        display: flex;
+        flex-direction: column;
+        //align-items: center;
+        ul{
+            padding-left: 5vw;
+            font-size: $font-size;
+        }
+        p{
+            text-align: left;
+        }
+    }
+
 }
+
 
 
 //submit quote
 
 #submit{
-    margin-top: 5vh;
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
+    margin-top: 5vh;
     #submit-button{
-        display:flex;
-        flex-direction:row;
+        display: flex;
+        text-align: center;
+        align-items: center;
         justify-content: center;
-        .halfCircleLeft{
-            width: 25px;
-            height: 45px;
-            border: 3px solid $font-color;
-            border-right: none;
-            border-radius: 25px 0 0 25px;
-        }
-        .rectangle{
-            display:flex;
-            flex-direction: column;
-            align-items: center;
-            width: 145px;
-            height: 45px;
-            border-top: 3px solid $font-color;
-            border-bottom: 3px solid $font-color;
-            text-align:center;
-            .request-container{
-                padding-top: 2px;
-                a{
-                    text-decoration: none;
-                    color: $font-color;
-                    font-size: 15px;
-                    text-transform: uppercase;
-                    letter-spacing: 3px;
-                }
+        .request-container{
+            width: 160px;
+            height: 40px;
+            border-radius: 30px;
+            border: 2px solid $font-color;
+            a{
+                text-decoration: none;
+                background-color:$background-color;
+                color: $font-color;
+                font-size: $font-header;
+                text-transform: uppercase;
+                letter-spacing: 2px;
             }
+        }
 
-        }
-        .halfCircleRight{
-            width: 25px;
-            height: 45px;
-            border: 3px solid $font-color;
-            border-left: none;
-            border-radius: 0 25px 25px 0;            
-        }
     }
-
 }
 
 //footer
@@ -311,7 +296,7 @@ footer{
         padding: 4vh 0 2vh 0;
         color: $font-color;
         text-align: center;
-        font-size: 15px;
+        font-size: $font-size;
     }
     #social-media{
         display: flex;
@@ -322,9 +307,9 @@ footer{
                 text-decoration: none;
             }
             img{
-                background-color: $font-color;
+                background-color: $logo-color;
                 border-radius:50%;
-                border: 2px solid $font-color;
+                border: 1px solid $logo-color;
                 width: auto;
                 height: 7vh;
                 min-height: 40px;
@@ -332,11 +317,10 @@ footer{
                 margin: 0 1vw 2vh 1vw;
             }
             img:hover{
-                background-color: white;
-                border-width: 3px;
+                border-width: 2px;
+                border-color: black;
             }
         }
-
-
     }
+    background: rgba(23,23,23,0.2);
 }
