--- a/css/services/desktop.scss
+++ b/css/services/desktop.scss
@@ -111,10 +111,10 @@ $font-header: 1em;
 
     .container.left{
         .carousel-container{
-            padding-left: 5vw;
+            padding-left: 30px;
         }
         p{
-            padding-left: 5vw;
+            padding-left: 30px;
         }
     }
 
